spec/errors/unclosed_blocks.lang
#
# Unclosed Block expressions
#

{
  a + b
  b.call({
    c + d
  })
